--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="appbar_scale_behavior">com.lxy.shop.widget.behavior.AppBarLayoutBehavior</string>
+
 </resources>
